demos/pe_out.txt
pe_tmp.py:2:3: error: oops
  xyZ
    ^
  (context lines: 2)
